# Tic-Tac-Toe

./: .gitignore  README.md  constants.py  main.py  new_file.py  pyproject.toml  tictactoe-example.py
docs/: user-guide.md
src/: constants.py  event_handler.py  game_logic.py  game_loop.py  game_state.py  graphics.py  renderer.py  screenshot_utils.py  utils.py
tests/: test_event_handler.py  test_game_state.py  test_utils.py
